--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "http-proxy-middleware": "^0.20.0",
     "json-server": "^0.16.1",
     "lodash.memoize": "^4.1.2",
+    "lodash.throttle": "^4.1.1",
     "memory-cache": "^0.2.0",
     "morgan": "^1.9.0",
     "nanoid": "^2.1.6",
@@ -158,9 +159,11 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.10.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^16.10.1",
     "react-helmet-async": "^1.0.3",
     "react-hook-form": "^5.3.1",
+    "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.1.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
