--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
   "dependencies": {
     "@babel/register": "^7.0.0",
     "@quickbaseoss/babel-plugin-styled-components-css-namespace": "^1.0.0-rc3",
+    "@redux-saga/core": "^1.1.3",
     "@reduxjs/toolkit": "^1.3.4",
     "axios": "^0.18.0",
     "bowser": "^2.1.2",
