--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "react-starter-boilerplate",
   "version": "2.3.1",
-  "description": "A starter boilerplate for an universal web application with the best development experience and best practices.",
   "main": "index.js",
   "engines": {
     "node": ">=6.0",
     "npm": ">=3.0"
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/snphq/react-starter-boilerplate"
+    "type": "git"
   },
   "keywords": [
     "starter",
